# graspit_bci_plugin

./: .gitignore  CMakeLists.txt  log.txt  logold.txt  package.xml
Untitled Folder/: log.txt
Untitled Folder 2/: log.txt
include/: BCIControlServer.h  BCIOnlinePlanner.h  BCIOnlinePlanner_2.h  listPlanner.h
include/BCI/: BCIStateMachine.h  bciService.h  bciWorldView.h  graspManager.h  handView.h  handViewWindow.h  onlinePlannerController.h  reachabilityAnalyzer.h  rosclient.h  state.h
include/BCI/controller_scene/: controller_scene_mgr.h  sprites.h
include/BCI/states/: activateRefinementState.h  bookmarkState.h  collectUserInfoState.h  confirmationState.h  executeGoHomeState.h  executeGoToBinState.h  executeRotationState.h  executeTranslationState.h  executionState.h  graspPlanningState.h  graspSelectionState.h  handRotationState.h  homeState.h  manualState.h  objectRecognitionState.h  objectSelectionState.h  onlinePlanningState.h  placementLocationSelectionState.h  rotationState.h  stoppedExecutionState.h  stoppedGoHomeState.h  stoppedGoToBinState.h  translationState.h
include/BCI/states_bkup/: activateRefinementState.h  confirmationState.h  graspSelectionState.h  handRotationState.h  objectRecognitionState.h  placementLocationSelectionState.h  stoppedExecutionState.h
include/BCI/utils/: BCILogger.h  plannerTools.h  plannerTools.h.autosave  uiTools.h  worldElementTools.h
include/graspit_bci_plugin/: bci_widget.h  graspit_bci_plugin.h  hand_view.h
launch/: #ros_graspit_interface.launch#  debug.sh  ros_graspit_interface.launch  ros_graspit_interface_debug.launch
src/: BCIControlServer.cpp  BCIOnlinePlanner.cpp  BCIOnlinePlanner_2.cpp  BCIOnlinePlanner_2.h  bci_widget.cpp  graspit_bci_plugin.cpp  hand_view.cpp  listPlanner.cpp  main.cpp  worldController.cpp
src/BCI/: BCIStateMachine.cpp  bciService.cpp  graspManager.cpp  handView.cpp  onlinePlannerController.cpp  reachabilityAnalyzer.cpp  rosclient.cpp  state.cpp
src/BCI/controller_scene/: controller_scene_mgr.cpp  sprites.cpp
src/BCI/states/: activateRefinementState.cpp  bookmarkState.cpp  collectUserInfoState.cpp  confirmationState.cpp  executeGoHomeState.cpp  executeGoToBinState.cpp  executeRotationState.cpp  executeTranslationState.cpp  executionState.cpp  graspPlanningState.cpp  graspSelectionState.cpp  handRotationState.cpp  homeState.cpp  manualState.cpp  objectRecognitionState.cpp  objectSelectionState.cpp  placementLocationSelectionState.cpp  rotationState.cpp  stoppedExecutionState.cpp  stoppedGoHomeState.cpp  stoppedGoToBinState.cpp  translationState.cpp
src/BCI/states_bkup/: confirmationState.cpp  objectSelectionState.cpp
src/BCI/utils/: BCILogger.cpp  plannerTools.cpp  uiTools.cpp  worldElementTools.cpp
ui/: BCIControlWindowBase.ui  bciControlWindow.h  bciWorldView.cpp  handView.cpp
ui/state_views/: activeRefinementView.cpp  confirmationView.cpp  executionView.cpp  graspPlanningView.cpp  graspPlanningView.h  graspPlanningView.ui  graspSelectionView.cpp  graspSelectionView.h  graspView.cpp  objectRecognitionView.cpp  objectSelectionView.cpp  placementLocationSelectionView.cpp  stoppedExecutionView.cpp
user_study_logs/: chad_log_GILEETE_ARM_NEVER_MOVED.txt  chad_log_all_fail1.txt  chad_log_all_sucess.txt  chad_log_gillete_hand_did_not_close.txt  chad_log_shampoo.txt  jared_all_log.txt  jared_shampoo_log.txt  zefa_log_all.txt  zefa_log_gillette.txt  zefa_log_shampoo.txt
user_study_logs/JiaYan/: jiayan_behind_ear.txt  log.txt
user_study_logs/caroline/: caroline_1_log.txt  caroline_2_log.txt
user_study_logs/ireti/: ia_1_log.txt  ia_2_log.txt  ia_3_log.txt  ia_4_log.txt  ireti_day_I.txt
user_study_logs/jin/: jin_log.txt
